<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onboardLayout" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        />
    
    <Button
        android:id="@+id/skipButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_smarty" 
        />
    
    <Button
        android:id="@+id/skipButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_done_that" 
        />
    
    <Button
        android:id="@+id/webButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watch_page"
        />

    <Button
        android:id="@+id/videoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/watch_video" />

</LinearLayout>